Update pages with clickable screenshots, professional gradient theme, and optimized layouts
- Added clickable screenshots for Forbes, Straits Times, Verge, and Wall Street Journal
- Implemented professional blue/aqua gradient theme for global coverage page
- Made snippets clickable with dotted underlines
- Added WSJ-Screenshot to Wall Street Journal section
- Optimized WUSA9 box sizing (10% wider, square proportions)
- Removed duplicate FirstPost article from feature archive
- Added Quomi article to archived features
- Updated CNN map with interactive features

--- a/radio-tv-interviews.html
+++ b/radio-tv-interviews.html
@@ -273,14 +273,17 @@
             </div>
             
             <div style="text-align: center; margin: 15px 0;">
-                    <a href="https://www.fox32chicago.com/video/fmc-xtat3xcykjqq3ptp" target="_blank" style="display: inline-block;">
-                        <div style="background: linear-gradient(135deg, #4169E1, #008b8b); color: white; padding: 40px 20px; border-radius: 8px; box-shadow: 0 4px 8px rgba(0,0,0,0.2); min-width: 300px;">
-                            <div style="font-size: 3rem; margin-bottom: 10px;">🦊</div>
-                            <div style="font-size: 1.2rem; font-weight: bold;">Fox 32 Chicago</div>
-                            <div style="font-size: 0.9rem; margin-top: 5px;">Smart Underwear coverage</div>
-                            <div style="font-size: 0.8rem; margin-top: 10px; opacity: 0.9;">Click to watch on Fox 32</div>
+                    <a href="https://www.fox32chicago.com/video/fmc-xtat3xcykjqq3ptp" target="_blank" style="display: inline-block; position: relative; text-decoration: none;">
+                        <img src="knowledge-base/media/Fox32.png" 
+                             alt="Fox 32 Chicago - Smart Underwear coverage" 
+                             style="max-width: 100%; height: auto; border-radius: 8px; box-shadow: 0 4px 8px rgba(0,0,0,0.2);">
+                        <div style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); width: 60px; height: 60px; background: rgba(255, 0, 0, 0.8); border-radius: 50%; display: flex; align-items: center; justify-content: center;">
+                            <div style="width: 0; height: 0; border-left: 20px solid white; border-top: 12px solid transparent; border-bottom: 12px solid transparent; margin-left: 5px;"></div>
                         </div>
                     </a>
+                    <p style="margin-top: 10px; font-size: 0.9rem; color: #666;">
+                        <strong>🦊 Click to watch on Fox 32 Chicago</strong>
+                    </p>
                 </div>
             
             <div style="font-style: italic; color: #333; font-size: 0.8rem; line-height: 1.5; text-align: left;">
