Add Fox 10 Phoenix to CNN map - 54th station in Arizona
- Added Fox 10 Phoenix (WALA-TV) as 54th station covering smart underwear research
- Updated station count from 53 to 54 stations
- Updated state count from 33 to 34 states (Arizona added)
- Updated CNN Package count from 45 to 46 stations
- Updated all references to station counts in stats, legend, and popups
- Fox 10 Phoenix covers story: 'Smart underwear could help researchers better understand human farts'

--- a/cnn-map.html
+++ b/cnn-map.html
@@ -141,10 +141,10 @@
                     <!-- Stats Boxes at Top -->
                     <div style="display: flex; justify-content: center; gap: 15px; margin-bottom: 11px;">
                         <div style="background: linear-gradient(135deg, #ff6b6b, #ff5252); color: white; padding: 6px 12px; border-radius: 6px; font-size: 0.7rem; font-weight: bold; box-shadow: 0 2px 4px rgba(255, 107, 107, 0.3);">
-                            53 Stations
+                            54 Stations
                         </div>
                         <div style="background: linear-gradient(135deg, #ff6b6b, #ff5252); color: white; padding: 6px 12px; border-radius: 6px; font-size: 0.7rem; font-weight: bold; box-shadow: 0 2px 4px rgba(255, 107, 107, 0.3);">
-                            33 States
+                            34 States
                         </div>
                     </div>
                     
@@ -156,7 +156,7 @@
                     <div style="display: flex; justify-content: center; gap: 17px; padding: 7px; background: rgba(204, 0, 0, 0.05); border-radius: 6px;">
                         <div style="display: flex; align-items: center; gap: 4px;">
                             <div style="background-color: #cc0000; width: 9px; height: 9px; border-radius: 50%; border: 1px solid white;"></div>
-                            <span style="font-size: 0.65rem; color: #333;">CNN Package (45)</span>
+                            <span style="font-size: 0.65rem; color: #333;">CNN Package (46)</span>
                         </div>
                         <div style="display: flex; align-items: center; gap: 4px;">
                             <div style="background-color: #ff6b6b; width: 9px; height: 9px; border-radius: 50%; border: 1px solid white;"></div>
@@ -203,6 +203,7 @@
             { name: "KFYR Bismarck", city: "Bismarck, ND", lat: 46.8083, lng: -100.7837, url: "https://www.kfyrtv.com/video/2026/02/18/smart-underwear-could-help-researchers-better-understand-human-farts/" },
             { name: "WUSA9 Washington D.C.", city: "Washington, D.C.", lat: 38.9072, lng: -77.0369, url: "https://www.wusa9.com/video/tech/science/umd-debuts-smart-underwear-that-tracks-well-you-know/65-35d4d012-fb45-483d-8ef8-e3a944022c57" },
             { name: "Fox 5 Vegas", city: "Las Vegas, NV", lat: 36.1699, lng: -115.1398, url: "https://www.fox5vegas.com/2026/02/18/scientists-make-smart-underwear-track-your-gas/" },
+            { name: "Fox 10 Phoenix", city: "Phoenix, AZ", lat: 33.4484, lng: -112.0740, url: "https://www.fox10tv.com/video/2026/02/18/smart-underwear-could-help-researchers-better-understand-human-farts/" },
             { name: "WAFF Huntsville", city: "Huntsville, AL", lat: 34.7304, lng: -86.5861, url: "https://www.waff.com/2026/02/18/scientists-make-smart-underwear-track-your-gas/" },
             { name: "WLUC TV6 Upper Michigan", city: "Negaunee, MI", lat: 46.4997, lng: -87.6128, url: "https://www.uppermichiganssource.com/2026/02/18/scientists-make-smart-underwear-track-your-gas/" },
             { name: "KSWO Lawton", city: "Lawton, OK", lat: 34.6036, lng: -98.3959, url: "https://www.kswo.com/2026/02/18/scientists-make-smart-underwear-track-your-gas/" },
@@ -278,7 +279,7 @@
                 <div style="font-family:Helvetica,sans-serif; min-width:180px;">
                     <strong style="color:${markerColor}; font-size:1rem;">📺 ${s.name}</strong><br>
                     <span style="color:#666; font-size:0.85rem;">${s.city}</span><br>
-                    <span style="color:#666; font-size:0.8rem;">53 TV stations · 33 states + D.C. · February 18, 2026 · ${stationType}</span><br><br>
+                    <span style="color:#666; font-size:0.8rem;">54 TV stations · 34 states + D.C. · February 18, 2026 · ${stationType}</span><br><br>
                     <a href="${s.url}" target="_blank" style="color:${markerColor}; font-weight:bold; font-size:0.85rem;">▶ Watch Story →</a>
                 </div>
             `);
