Add KCRG Iowa to CNN map - 57th station in Iowa
- Added KCRG Iowa (Cedar Rapids) as 57th station covering smart underwear research
- Updated station count from 56 to 57 stations
- Updated CNN Package count from 48 to 49 stations
- Updated all references to station counts in stats, legend, and popups
- KCRG Iowa covers story: 'Smart underwear could help researchers better understand human farts'
- Expands Midwest coverage with additional Iowa station

--- a/cnn-map.html
+++ b/cnn-map.html
@@ -141,7 +141,7 @@
                     <!-- Stats Boxes at Top -->
                     <div style="display: flex; justify-content: center; gap: 15px; margin-bottom: 11px;">
                         <div style="background: linear-gradient(135deg, #ff6b6b, #ff5252); color: white; padding: 6px 12px; border-radius: 6px; font-size: 0.7rem; font-weight: bold; box-shadow: 0 2px 4px rgba(255, 107, 107, 0.3);">
-                            56 Stations
+                            57 Stations
                         </div>
                         <div style="background: linear-gradient(135deg, #ff6b6b, #ff5252); color: white; padding: 6px 12px; border-radius: 6px; font-size: 0.7rem; font-weight: bold; box-shadow: 0 2px 4px rgba(255, 107, 107, 0.3);">
                             35 States
@@ -156,7 +156,7 @@
                     <div style="display: flex; justify-content: center; gap: 17px; padding: 7px; background: rgba(204, 0, 0, 0.05); border-radius: 6px;">
                         <div style="display: flex; align-items: center; gap: 4px;">
                             <div style="background-color: #cc0000; width: 9px; height: 9px; border-radius: 50%; border: 1px solid white;"></div>
-                            <span style="font-size: 0.65rem; color: #333;">CNN Package (48)</span>
+                            <span style="font-size: 0.65rem; color: #333;">CNN Package (49)</span>
                         </div>
                         <div style="display: flex; align-items: center; gap: 4px;">
                             <div style="background-color: #ff6b6b; width: 9px; height: 9px; border-radius: 50%; border: 1px solid white;"></div>
@@ -206,6 +206,7 @@
             { name: "Fox 10 Phoenix", city: "Phoenix, AZ", lat: 33.4484, lng: -112.0740, url: "https://www.fox10tv.com/video/2026/02/18/smart-underwear-could-help-researchers-better-understand-human-farts/" },
             { name: "Fox 12 Portland", city: "Portland, OR", lat: 45.5152, lng: -122.6784, url: "https://www.kptv.com/video/2026/02/18/smart-underwear-could-help-researchers-better-understand-human-farts/" },
             { name: "WFSB Channel 3", city: "Hartford, CT", lat: 41.7658, lng: -72.6734, url: "https://www.wfsb.com/video/2026/02/18/smart-underwear-could-help-researchers-better-understand-human-farts/" },
+            { name: "KCRG Iowa", city: "Cedar Rapids, IA", lat: 41.9779, lng: -91.6656, url: "https://www.kcrg.com/video/2026/02/18/smart-underwear-could-help-researchers-better-understand-human-farts/" },
             { name: "WAFF Huntsville", city: "Huntsville, AL", lat: 34.7304, lng: -86.5861, url: "https://www.waff.com/2026/02/18/scientists-make-smart-underwear-track-your-gas/" },
             { name: "WLUC TV6 Upper Michigan", city: "Negaunee, MI", lat: 46.4997, lng: -87.6128, url: "https://www.uppermichiganssource.com/2026/02/18/scientists-make-smart-underwear-track-your-gas/" },
             { name: "KSWO Lawton", city: "Lawton, OK", lat: 34.6036, lng: -98.3959, url: "https://www.kswo.com/2026/02/18/scientists-make-smart-underwear-track-your-gas/" },
@@ -281,7 +282,7 @@
                 <div style="font-family:Helvetica,sans-serif; min-width:180px;">
                     <strong style="color:${markerColor}; font-size:1rem;">📺 ${s.name}</strong><br>
                     <span style="color:#666; font-size:0.85rem;">${s.city}</span><br>
-                    <span style="color:#666; font-size:0.8rem;">56 TV stations · 35 states + D.C. · February 18, 2026 · ${stationType}</span><br><br>
+                    <span style="color:#666; font-size:0.8rem;">57 TV stations · 35 states + D.C. · February 18, 2026 · ${stationType}</span><br><br>
                     <a href="${s.url}" target="_blank" style="color:${markerColor}; font-weight:bold; font-size:0.85rem;">▶ Watch Story →</a>
                 </div>
             `);
