Add audience estimates column and update Colbert segment
- Added 'Estimated Audience' column to media-coverage.csv
- Updated Stephen Colbert segment title to 'Sound of Science' on index page
- Added separate entries for Colbert TV broadcast (2.3M viewers) and YouTube clip (500K views)
- Colbert TV audience: 2,300,000 viewers based on February 2026 Nielsen ratings
- Colbert YouTube clip: 500,000 estimated views for the Smart Underwear segment
- Updated alt text and badge to reflect 'Sound of Science' naming
- Separated TV broadcast viewership from YouTube digital viewership for accurate tracking

--- a/index.html
+++ b/index.html
@@ -54,11 +54,11 @@
             <!-- Featured Video - Stephen Colbert -->
             <div style="background-color: #f0f8ff; padding: 15px; border-radius: 8px; margin-bottom: 20px; border-left: 5px solid #4169E1;">
                 <p style="color: #666; font-size: 0.8rem; margin-bottom: 10px;">February 19, 2026</p>
-                <span class="badge">Smart Underwear joke at 3:04</span>
+                <span class="badge">Sound of Science</span>
                 <div style="text-align: center; margin: 15px 0;">
                     <a href="https://www.youtube.com/watch?v=d_aeNUgLGwM&t=1s" target="_blank" style="display: inline-block; position: relative; text-decoration: none;">
                         <img src="knowledge-base/media/Colbert-Screen.png" 
-                             alt="Stephen Colbert - Smart Underwear joke at 3:04" 
+                             alt="Stephen Colbert - Sound of Science" 
                              style="max-width: 100%; height: auto; border-radius: 8px; box-shadow: 0 4px 8px rgba(0,0,0,0.2);">
                         <div style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); width: 60px; height: 60px; background: rgba(255, 0, 0, 0.8); border-radius: 50%; display: flex; align-items: center; justify-content: center;">
                             <div style="width: 0; height: 0; border-left: 20px solid white; border-top: 12px solid transparent; border-bottom: 12px solid transparent; margin-left: 5px;"></div>
