Reduce banner snippet buttons by 20% for better layout balance

--- a/index.html
+++ b/index.html
@@ -52,10 +52,10 @@
                style="position: absolute; top: 50%; left: 20px; transform: translateY(-50%); display: flex; flex-direction: column; align-items: center; gap: 8px; text-decoration: none; transition: transform 0.2s, box-shadow 0.2s;"
                onmouseover="this.style.transform='translateY(-50%) scale(1.05)'; this.style.boxShadow='0 6px 20px rgba(65, 105, 225, 0.4)';"
                onmouseout="this.style.transform='translateY(-50%) scale(1)'; this.style.boxShadow='none';">
-                <div style="width: 336px; height: 192px; border-radius: 12px; overflow: hidden; box-shadow: 0 4px 15px rgba(0,0,0,0.15); border: 2px solid #4169E1;">
+                <div style="width: 269px; height: 154px; border-radius: 12px; overflow: hidden; box-shadow: 0 4px 15px rgba(0,0,0,0.15); border: 2px solid #4169E1;">
                     <img src="knowledge-base/media/HumanFlatusAtlas-snippet.png" 
                          alt="Human Flatus Atlas website snippet" 
-                         style="width: 336px; height: 192px; object-fit: cover; display: block; object-position: 0% 50%;">
+                         style="width: 269px; height: 154px; object-fit: cover; object-position: 0% 50%; display: block; border-radius: 10px;">
                 </div>
                 <span style="background: linear-gradient(135deg, #4169E1, #008b8b); color: white; padding: 6px 12px; border-radius: 20px; font-size: 0.8rem; font-weight: bold;">🌐 Visit Atlas</span>
             </a>
@@ -66,10 +66,10 @@
                style="position: absolute; top: 50%; right: 20px; transform: translateY(-50%); display: flex; flex-direction: column; align-items: center; gap: 8px; text-decoration: none; transition: transform 0.2s, box-shadow 0.2s;"
                onmouseover="this.style.transform='translateY(-50%) scale(1.05)'; this.style.boxShadow='0 6px 20px rgba(65, 105, 225, 0.4)';"
                onmouseout="this.style.transform='translateY(-50%) scale(1)'; this.style.boxShadow='none';">
-                <div style="width: 336px; height: 192px; border-radius: 12px; overflow: hidden; box-shadow: 0 4px 15px rgba(0,0,0,0.15); border: 2px solid #4169E1;">
+                <div style="width: 269px; height: 154px; border-radius: 12px; overflow: hidden; box-shadow: 0 4px 15px rgba(0,0,0,0.15); border: 2px solid #4169E1;">
                     <img src="knowledge-base/media/BiosensorsandBioelectronics-Snippet.png" 
                          alt="Biosensors and Bioelectronics paper snippet" 
-                         style="width: 336px; height: 192px; object-fit: cover; display: block;">
+                         style="width: 269px; height: 154px; object-fit: cover; display: block;">
                 </div>
                 <span style="background: linear-gradient(135deg, #4169E1, #008b8b); color: white; padding: 6px 12px; border-radius: 20px; font-size: 0.8rem; font-weight: bold;">📄 Read Paper</span>
             </a>
