Add comprehensive global media coverage pages
- Add global-english-media.html for English international coverage
- Add global-multilingual-media.html for non-English international coverage
- Add international-coverage.html as main international hub
- Update index.html with international coverage navigation
- Update other-featured.html with international media sections
- Include 19 international publications across 15+ countries
- Add translation badges and audience reach data
- Maintain consistent styling with main site

--- a/other-featured.html
+++ b/other-featured.html
@@ -587,8 +587,8 @@
                 </p>
             </div>
             
-            <!-- English Language Global Coverage -->
-            <h2 style="color: #1a5490; margin: 40px 0 20px 0; font-size: 1.8rem; font-weight: bold; text-align: center; border-bottom: 3px solid #4169E1; padding-bottom: 10px;">🌍 English Language Global Coverage</h2>
+            <!-- Global English Media Coverage -->
+            <h2 style="color: #1a5490; margin: 40px 0 20px 0; font-size: 1.8rem; font-weight: bold; text-align: center; border-bottom: 3px solid #ff9800; padding-bottom: 10px;">🌐 Global English Media Coverage</h2>
             
             <!-- Global Coverage Stories in 3 columns (Row 1) -->
             <div style="display: flex; gap: 20px; align-items: stretch; margin-bottom: 20px;">
