Update navigation and fix Times snippet display
- Change 'Interviews with the Scientists' to 'Multimedia' in navigation
- Fix The Times snippet filename case sensitivity (TheTimes-snippet.png)
- Ensure proper image display for The Times coverage in Breaking News

--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
         <!-- Navigation Buttons -->
         <div style="display: flex; justify-content: center; gap: 8px; margin: 20px 0; flex-wrap: wrap;">
             <a href="radio-tv-interviews.html" style="display: block; background-color: #6f42c1; color: white; text-align: center; padding: 8px 16px; border-radius: 6px; text-decoration: none; font-weight: bold; font-size: 0.8rem; transition: background-color 0.3s; min-width: 140px;">
-                🎙️ Interviews with the Scientists
+                🎙️ Multimedia
             </a>
             <a href="cnn-map.html" style="display: block; background-color: #cc0000; color: white; text-align: center; padding: 8px 16px; border-radius: 6px; text-decoration: none; font-weight: bold; font-size: 0.8rem; transition: background-color 0.3s; min-width: 140px;">
                 🗺️ CNN Coverage Map
@@ -331,7 +331,7 @@
                         📸 The Times (UK)
                     </div>
                     <div style="flex: 1; overflow: hidden; position: relative; cursor: pointer;" onclick="window.open('https://www.thetimes.com/uk/science/article/smart-pants-flatulence-v9k0kn2vj?gaa_at=eafs&gaa_n=AWEtsqdfHUAIgLZn5poxsL9Vnun1Oc0qwrEf0uEdPDAoLXBtD7yNTFVQl8hh6xo6Xjc%3D&gaa_ts=69a1aaab&gaa_sig=SJMfeu5yfPZN51jT_HhmizWH0HUiTv6boc8rHxO1wdZgPXsXmDba8FSqNTdjEoYaN2G1JfyjuMYTj3FVX9jVoQ%3D%3D', '_blank')">
-                        <img src="knowledge-base/media/TheTimes-Snippet.png" 
+                        <img src="knowledge-base/media/TheTimes-snippet.png" 
                              alt="The Times website screenshot" 
                              style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; object-fit: contain; border: none; transition: transform 0.2s;"
                              loading="lazy">
